k8s/base/frontend/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '["campaign-api","event-hub"]'
  labels:
    app: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/part-of: simon-casino-app
    app.openshift.io/runtime: nginx
    component: ui
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-nodejs: 'true'
        sidecar.opentelemetry.io/inject: app-sidecar
      labels:
        app: frontend
        app.kubernetes.io/component: frontend
        app.kubernetes.io/instance: frontend
        app.kubernetes.io/part-of: simon-casino-app
        app.openshift.io/runtime: nginx
        component: ui
    spec:
      containers:
      - image: quay.io/rh-ee-dayeo/marketing-assistant:frontend
        imagePullPolicy: Always
        name: frontend
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 25m
            memory: 64Mi
        volumeMounts:
        - name: keycloak-config
          mountPath: /usr/share/nginx/html/keycloak-config.js
          subPath: keycloak-config.js
      volumes:
      - name: keycloak-config
        configMap:
          name: frontend-keycloak-config
          optional: true
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: frontend
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
  name: marketing-assistant
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: frontend
